# meridian-schemas

./: .bazelrc  BUILD.bazel  GRAMMAR_PANEL.md  MODULE.bazel  PRIMITIVES-NEXT.md  README.md  package.json  pnpm-lock.yaml  schemas.package.json
.github/workflows/: ci.yml  publish.yml
bazel/: BUILD.bazel  proto_es.bzl  protoc_prebuilt.bzl
proto/: BUILD.bazel  affordance.proto  catalog.proto  choice.proto  command_palette.proto  connect_flow.proto  conversation.proto  copy_value.proto  form.proto  gallery.proto  grammar.proto  layout_service.proto  llm_prompt.proto  lro.proto  media.proto  nav_tree.proto  panel.proto  prompt.proto  proto-ts.package.json  rpc.proto  snippet.proto  stat.proto  steps.proto  stream.proto  table.proto  terminal.proto  theme.proto  tsconfig.es.json  uiview.proto  view.proto
proto/es/: BUILD.bazel
src/uiview/: BUILD.bazel  index.ts  stat.ts  transport.ts  web_renderer.ts
tools/: check_versions.py  form_repeated_field.test.mjs  mirror_conformance.mjs  mirror_conformance.test.mjs
