load("@rules_java//java:java_library.bzl", "java_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_java//:defs.bzl", "java_grpc_library", "java_proto_library")
load("@rules_rust_prost//:defs.bzl", "rust_prost_transform")
load("@rules_swift//proto:proto.bzl", "swift_proto_library")

package(default_visibility = ["//visibility:public"])

# Adds `#[derive(::serde::Serialize, ::serde::Deserialize)]` to every
# prost-generated type for meridian.ui.v1 so the wasm-bindgen surface
# (//rust/uiview:uiview_wasm_lib) can serde_wasm_bindgen-round-trip
# JSON-shaped PanelDescriptors across the JS boundary. The `deps`
# attribute hands the serde crate to the prost-generated rust target
# so the derives resolve.
rust_prost_transform(
    name = "uiview_proto_serde_transform",
    prost_opts = [
        "type_attribute=.=#[derive(::serde::Serialize\\, ::serde::Deserialize)]",
    ],
    deps = ["@crates//:serde"],
)

# Meridian's platform-neutral UI view descriptors.
#
# A PanelDescriptor captures everything a renderer needs to host one
# right-pane view: which RPC to call, how to map the response into
# rows, what columns to display, what actions to expose, what type
# conversions to apply. Three renderers will consume the same protos:
#
#   - JavaFX desktop UI (under //java/javafx)
#   - Web (TypeScript / web components) — staged for stage 2
#   - Rust TUI (ratatui) — staged for stage 3
#
# Bespoke layouts that don't fit any shape variant route through the
# AdhocPanel oneof variant which names a host-side handler.
proto_library(
    name = "uiview_proto",
    # Split into one file per concept for clarity. The compiled
    # output is identical (single `meridian.ui.v1` package); the
    # split is purely an authoring convenience. Intra-package
    # imports use `proto/<name>.proto` form to match the
    # workspace-relative resolution Bazel applies to proto_library
    # without a `strip_import_prefix`.
    srcs = [
        "form.proto",
        "llm_prompt.proto",
        "lro.proto",
        "panel.proto",
        "prompt.proto",
        "rpc.proto",
        "table.proto",
    ],
    data = [":uiview_proto_serde_transform"],
    deps = [
        "@googleapis//google/api:field_behavior_proto",
    ],
)

java_proto_library(
    name = "uiview_java_proto_library",
    protos = [":uiview_proto"],
    deps = [
        ":uiview_proto",
        "@googleapis//google/api:api_java_proto",
        "@protobuf//:protobuf_java",
    ],
)

# swift-protobuf types for meridian.ui.v1, consumed by the SwiftUI renderer
# (//swift:MeridianUI). The target name is the generated Swift MODULE name
# (`import MeridianProto`), so BundleLoader.swift can decode the binpb. The
# default compiler (//proto/compilers:swift_proto) is swift-protobuf only
# (no gRPC plugin) — the renderer's transport is host-supplied. Requires a
# full Xcode on the build host (swiftc).
swift_proto_library(
    name = "MeridianProto",
    # Pin the generated Swift module name; otherwise rules_swift derives it from
    # the label (e.g. proto_MeridianProto) and `import MeridianProto` fails.
    module_name = "MeridianProto",
    protos = [":uiview_proto"],
)

# Java gRPC stubs for google.longrunning.Operations, generated via the
# rules_proto_grpc_java toolchain. We can't depend on googleapis-grpc-
# java directly because it ships a grpc-java compiler plugin that
# doesn't compile against our pinned protobuf version — so we generate
# the stubs locally against our toolchain. Same pattern Pinax uses.
java_grpc_library(
    name = "longrunning_java_grpc_library",
    protos = ["@googleapis//google/longrunning:operations_proto"],
    deps = [
        "@googleapis//google/longrunning:longrunning_java_proto",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
    ],
)
